# scholarsquill

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CURRENT_ARCHITECTURE.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  QUICK_START.md  README.md  TROUBLESHOOTING.md  command.md  pyproject.toml  requirements.md  requirements.txt  scholarsquill  setup.py
docs/: CITEKEY_FUNCTIONALITY.md  ZOTERO_ARCHITECTURE.md  ZOTERO_INTEGRATION.md  ZOTERO_OBSIDIAN_IMPLEMENTATION_PLAN.md  ZOTERO_OBSIDIAN_INTEGRATION_SPEC.md  citemap_command.md  design.md
scholarsquill_cli/: __init__.py
specs/002-zotero-and-obsidian/: spec.md  tasks.md
src/: __init__.py  analysis_instructions.py  batch_processor.py  citemap_processor.py  claude_literature_generator.py  command_parser.py  config.py  content_extractor.py  exceptions.py  file_writer.py  interfaces.py  llm_integration.py  main.py  metadata_extractor.py  minireview_processor.py  models.py  note_generator.py  pdf_processor.py  server.py  server_core.py  template_engine.py  template_loader.py  utils.py
src/legacy_mcp_server/: README.md  batch_processor.py  command_parser.py  config.py  content_analyzer.py  exceptions.py  file_writer.py  interfaces.py  llm_integration.py  mcp_mock.py  note_generator.py  pdf_processor.py  server.py  server_core.py  utils.py
src/obsidian/: formatter.py  writer.py
src/zotero/: batch_processor.py  cache.py  client.py  config.py  exceptions.py  logging_config.py  mapper.py  workflow.py
templates/: .gitkeep  balanced.md  citemap.md  citemap_batch.md  codelang.md  method.md  minireview.md  research.md  review.md  theory.md
tests/: __init__.py  run_template_integration_tests.py  test_analysis_instructions.py  test_batch_processor.py  test_citekey_and_filename_generation.py  test_citekey_generation.py  test_command_parser.py  test_components.py  test_config.py  test_content_analyzer.py  test_file_writer.py  test_integration_e2e.py  test_mcp_integration.py  test_models.py  test_note_generator.py  test_pdf_processing_integration.py  test_pdf_processor.py  test_redesign.py  test_server.py  test_server_basic.py  test_sq_note_redesign.py  test_task_3_1_completion.py  test_task_3_1_integration.py  test_template_customization.py  test_template_engine.py  test_template_integration_e2e.py  test_template_integration_simple.py  test_template_integration_unit.py  test_template_integration_workflow.py  test_utils.py
tests/examples/: README.md
tests/examples/prompts/: P_Academic Writing Assistant.md  P_Batch_Literature Note_Network_Analysis.md  P_Code Language.md  P_Literature Note - Theoretical Works.md  P_Literature Note.md  P_Structure Code Language.md  P_Writing Template.md
tests/input/experimental/: README.md  copy_instructions.sh  copy_status.txt
tests/input/theoretical/: README.md
tests/integration/: test_batch_workflow.py  test_zotero_integration.py
tests/unit/: test_obsidian_formatter.py  test_zotero_batch_processor.py  test_zotero_client.py  test_zotero_mapper.py
